--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,31 +1,35 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/configuration-reference
 version: 2.1
 
-# Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/jobs-steps/#jobs-overview & https://circleci.com/docs/configuration-reference/#jobs
-jobs:
-  say-hello:
-    # Specify the execution environment. You can specify an image from Docker Hub or use one of our convenience images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/executor-intro/ & https://circleci.com/docs/configuration-reference/#executor-job
+executors:
+  dotnet-executor:
     docker:
-      # Specify the version you desire here
-      # See: https://circleci.com/developer/images/image/cimg/base
-      - image: cimg/base:current
+      - image: mcr.microsoft.com/dotnet/sdk:6.0  # Change if using a different version
+    working_directory: ~/repo
 
-    # Add steps to the job
-    # See: https://circleci.com/docs/jobs-steps/#steps-overview & https://circleci.com/docs/configuration-reference/#steps
+jobs:
+  sonar_scan:
+    executor: dotnet-executor
     steps:
-      # Checkout the code as the first step.
       - checkout
       - run:
-          name: "Say hello"
-          command: "echo Hello, World!"
+          name: Install Dependencies
+          command: dotnet restore
+      - run:
+          name: Build Project
+          command: dotnet build
+      - run:
+          name: Install SonarScanner for .NET
+          command: dotnet tool install --global dotnet-sonarscanner
+      - run:
+          name: Run SonarQube Scan
+          command: |
+            export PATH="$PATH:/root/.dotnet/tools"
+            dotnet-sonarscanner begin /k:"ShayurM_ADPS-POE-Circle-CI" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.login="$SONAR_TOKEN"
+            dotnet build
+            dotnet-sonarscanner end /d:sonar.login="$SONAR_TOKEN"
 
-# Orchestrate jobs using workflows
-# See: https://circleci.com/docs/workflows/ & https://circleci.com/docs/configuration-reference/#workflows
 workflows:
-  say-hello-workflow: # This is the name of the workflow, feel free to change it to better match your workflow.
-    # Inside the workflow, you define the jobs you want to run.
+  version: 2
+  sonar_workflow:
     jobs:
-      - say-hello
+      - sonar_scan
