--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.1
 executors:
   dotnet-executor:
     docker:
-      - image: mcr.microsoft.com/dotnet/sdk:6.0  # Ensure you use a valid .NET SDK image
+      - image: mcr.microsoft.com/dotnet/sdk:8.0  # Use .NET 8.0 SDK image
     working_directory: ~/repo
 
 jobs:
