--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.1
 executors:
   dotnet-executor:
     docker:
-      - image: mcr.microsoft.com/dotnet/sdk:6.0  # Change if using a different version
+      - image: mcr.microsoft.com/dotnet/sdk:8.0  # Use .NET 8.0 SDK image
     working_directory: ~/repo
 
 jobs:
@@ -11,6 +11,11 @@ jobs:
     executor: dotnet-executor
     steps:
       - checkout
+      - run:
+          name: Install Node.js
+          command: |
+            curl -sL https://deb.nodesource.com/setup_18.x | bash -
+            apt-get install -y nodejs
       - run:
           name: Install Dependencies
           command: dotnet restore
